K8s/comments.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commentsservice
  template:
    metadata:
      labels:
        app: commentsservice
    spec:
      containers:
        - name: commentsservice
          image: commentsservice
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commentsservice
  ports:
    - name: commentsservice
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: comments-loadbalancer-srv
spec:
  type: LoadBalancer
  selector:
    app: commentsservice
  ports:
    - name: commentsservice
      protocol: TCP
      port: 5000
      targetPort: 8080
