K8s/posts-np-sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postsservice-srv
spec:
  type: NodePort
  selector:
    app: postsservice
  ports:
    - name: postsservice
      protocol: TCP
      port: 80
      targetPort: 8080
