K8s/ratings-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratingsservice
  template:
    metadata:
      labels:
        app: ratingsservice
    spec:
      containers:
        - name: ratingsservice
          image: ratingsservice
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ratings-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: ratingsservice
  ports:
    - name: ratingsservice
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ratings-loadbalancer-srv
spec:
  type: LoadBalancer
  selector:
    app: ratingsservice
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
